--- a/src/components/works/Works.scss
+++ b/src/components/works/Works.scss
@@ -1,3 +1,104 @@
 .works {
-    background-color: lightgreen;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: crimson;
+
+
+  .arrow {
+      position: absolute;
+      height: 50px;
+      cursor: pointer;
+
+      &.left {
+          left: 100px;
+          transform: rotateY(180deg);
+      }
+
+      &.right {
+          right: 100px;
+      }
+  }
+
+  .slider {
+    display: flex;
+    position: absolute;
+    left: 0;
+    height: 450px;
+
+    .container {
+      width: 100vw;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      .item {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: white;
+        border-radius: 20px;
+        width: 800px;
+        height: 100%;
+
+        .left {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          flex: 4;
+          height: 80%;
+
+          .leftContainer {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            width: 90%;
+            height: 70%;
+
+            .imgContainer {
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              width: 40px;
+              height: 40px;
+              border-radius: 50%;
+              background: rgb(245, 179, 155);
+
+              img {
+                width: 25px;
+              }
+            }
+
+            h2 {
+              font-size: 20px;
+            }
+            p {
+              font-size: 13px;
+            }
+            span {
+              font-size: 12px;
+              font-weight: 600;
+              text-decoration: underline;
+              cursor: pointer;
+            }
+          }
+        }
+        .right {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          flex: 8;
+          height: 100%;
+          overflow: hidden;
+
+          img {
+              height: auto;
+            width: auto;
+            transform: rotate(-10deg);
+          }
+        }
+      }
+    }
+  }
 }
