--- a/src/components/works/Works.scss
+++ b/src/components/works/Works.scss
@@ -5,27 +5,27 @@
   justify-content: center;
   background-color: crimson;
 
-
   .arrow {
-      position: absolute;
-      height: 50px;
-      cursor: pointer;
+    position: absolute;
+    height: 50px;
+    cursor: pointer;
 
-      &.left {
-          left: 100px;
-          transform: rotateY(180deg);
-      }
+    &.left {
+      left: 100px;
+      transform: rotateY(180deg);
+    }
 
-      &.right {
-          right: 100px;
-      }
+    &.right {
+      right: 100px;
+    }
   }
 
   .slider {
-    display: flex;
     position: absolute;
     left: 0;
+    display: flex;
     height: 450px;
+    transition: all 1s ease-out;
 
     .container {
       width: 100vw;
@@ -93,8 +93,7 @@
           overflow: hidden;
 
           img {
-              height: auto;
-            width: auto;
+            width: 490px;
             transform: rotate(-10deg);
           }
         }
