--- a/src/components/testimonials/Testimonials.scss
+++ b/src/components/testimonials/Testimonials.scss
@@ -1,3 +1,79 @@
 .testimonials {
-    background-color: lightcoral;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: white;
+
+  h1 {
+    font-size: 50px;
+  }
+
+  .container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 80%;
+
+    .card {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+      padding: 30px;
+      width: 300px;
+      height: 70%;
+      border-radius: 10px;
+      box-shadow: 0px 0px 15px -8px black;
+      margin: 0 30px;
+      transition: all 0.7s ease;
+
+      &:hover {
+          transform: scale(1.1);
+      }
+
+      .top {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        img {
+          margin-right: 12px;
+
+          &.left,
+          &.right {
+            margin-right: 10px;
+            height: 25px;
+          }
+
+          &.user {
+            height: 105px;
+            width: 105px;
+            border-radius: 50%;
+            object-fit: cover;
+          }
+        }
+      }
+
+      .center {
+        padding: 10px;
+        background-color: rgb(250, 244, 245);
+        border-radius: 10px;
+      }
+
+      .bottom {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+
+        h3 {
+          margin-bottom: 10px;
+        }
+
+        h4 {
+          color: rgb(0, 0, 0);
+        }
+      }
+    }
+  }
 }
