--- a/src/components/contactMe/ContactMe.scss
+++ b/src/components/contactMe/ContactMe.scss
@@ -1,3 +1,68 @@
 .contactMe {
-    background-color: lightblue;
+  display: flex;
+  background-color: white;
+
+  .left {
+    flex: 1;
+    overflow: hidden;
+
+    img {
+      height: 100%;
+    }
+  }
+  .right {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    h2 {
+      position: relative;
+      bottom: 30px;
+      font-size: 30px;
+    }
+
+    form {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: space-around;
+      width: 70%;
+      height: 45%;
+
+      input {
+        width: 450px;
+        height: 30px;
+        font-size: 14px;
+      }
+
+      textarea {
+        width: 450px;
+        height: 300px;
+        font-size: 14px;
+        margin-top: 10px;
+      }
+
+      button {
+        width: 175px;
+        height: 30px;
+        color: white;
+        background-color: crimson;
+        border: none;
+        border-radius: 10px;
+        font-weight: 500;
+        cursor: pointer;
+        margin-top: 20px;
+
+        &:focus {
+          outline: none;
+        }
+      }
+
+      span {
+        color: green;
+      }
+    }
+  }
 }
