--- a/src/components/intro/Intro.scss
+++ b/src/components/intro/Intro.scss
@@ -1,6 +1,13 @@
+@import "../../global.scss";
+
 .intro {
   display: flex;
   background-color: white;
+
+  @include mobile {
+    flex-direction: column;
+    align-items: center;
+  }
 
   .left {
     flex: 0.5;
@@ -16,8 +23,16 @@
       border-radius: 50%;
       background-color: crimson;
 
+      @include mobile {
+        align-items: flex-start;
+      }
+
       img {
         height: 90%;
+
+        @include mobile {
+          height: 50%;
+        }
       }
     }
   }
@@ -33,15 +48,32 @@
       height: 100%;
       padding-left: 75px;
 
+      @include mobile {
+        padding-left: 0;
+        align-items: center;
+      }
+
       h1 {
         font-size: 95px;
         margin: 10px 0;
+
+        @include mobile {
+          font-size: 50px;
+        }
       }
       h2 {
         font-size: 50px;
+
+        @include mobile {
+          font-size: 40px;
+        }
       }
       h3 {
         font-size: 45px;
+
+        @include mobile {
+          font-size: 25px;
+        }
 
         span {
             font-size: inherit;
@@ -70,6 +102,10 @@
       img {
         width: 30px;
         animation: arrowBlink 2s infinite;
+
+        @include mobile {
+          margin-left: 37px;
+        }
       }
 
       @keyframes arrowBlink {
