--- a/src/components/contactMe/ContactMe.scss
+++ b/src/components/contactMe/ContactMe.scss
@@ -1,6 +1,12 @@
+@import "../../global.scss";
+
 .contactMe {
   display: flex;
   background-color: white;
+
+  @include mobile {
+    flex-direction: column;
+  }
 
   .left {
     flex: 1;
@@ -35,6 +41,11 @@
         width: 450px;
         height: 30px;
         font-size: 14px;
+
+        @include mobile {
+          width: 225px;
+          height: 20px;
+        }
       }
 
       textarea {
@@ -42,6 +53,11 @@
         height: 300px;
         font-size: 14px;
         margin-top: 10px;
+
+        @include mobile {
+          width: 225px;
+          height: 100px;
+        }
       }
 
       button {
