--- a/src/components/portfolio/Portfolio.scss
+++ b/src/components/portfolio/Portfolio.scss
@@ -1,62 +1,68 @@
 @import "../../global.scss";
 
 .portfolio {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: white;
+
+  h1 {
+    font-size: 50px;
+    margin-bottom: 10px;
+
+    @include mobile {
+      font-size: 20px;
+    }
+  }
+
+  .container {
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
     align-items: center;
-    background-color: white;
+    justify-content: center;
+    width: 70%;
 
-    h1 {
-        font-size: 50px;
-        margin-bottom: 10px;
+    @include mobile {
+      width: 100%;
     }
 
-    ul {
-        display: flex;
-        margin: 10px;
-        padding: 0;
-        list-style: none;
-    }
+    .item {
+      position: relative;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 370px;
+      height: 350px;
+      border-radius: 20px;
+      border: 1px solid rgb(240, 239, 239);
+      margin: 15px 38px;
+      color: white;
+      cursor: pointer;
 
-    .container {
-        display: flex;
-        flex-wrap: wrap;
-        align-items: center;
-        justify-content: center;
-        width: 70%;
+      @include mobile {
+        width: 117px;
+        height: 214px;
+      }
 
-        .item {
-            position: relative;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            width: 370px;
-            height: 350px;
-            border-radius: 20px;
-            border: 1px solid rgb(240, 239, 239);
-            margin: 15px 38px;
-            color: white;
-            cursor: pointer;
+      h3 {
+        position: absolute;
+        font-size: 20px;
+      }
 
-            h3 {
-                position: absolute;
-                font-size: 20px;
-            }
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        z-index: 1;
+      }
 
-            img {
-                width: 100%;
-                height: 100%;
-                object-fit: cover;
-                z-index: 1;
-            }
-
-            &:hover {
-                background-color: $mainColor;
-                img {
-                    opacity: 0.2;
-                    z-index: 0;
-                }
-            }
+      &:hover {
+        background-color: $mainColor;
+        img {
+          opacity: 0.2;
+          z-index: 0;
         }
+      }
     }
+  }
 }
