--- a/src/components/testimonials/Testimonials.scss
+++ b/src/components/testimonials/Testimonials.scss
@@ -1,3 +1,5 @@
+@import "../../global.scss";
+
 .testimonials {
   display: flex;
   flex-direction: column;
@@ -6,6 +8,10 @@
 
   h1 {
     font-size: 50px;
+
+    @include mobile {
+      font-size: 20px;
+    }
   }
 
   .container {
@@ -14,6 +20,11 @@
     justify-content: center;
     width: 100%;
     height: 80%;
+
+    @include mobile {
+      flex-direction: column;
+      justify-content: space-between;
+    }
 
     .card {
       display: flex;
@@ -27,8 +38,13 @@
       margin: 0 30px;
       transition: all 0.7s ease;
 
+      @include mobile {
+        height: 180px;
+        margin: 40px 0;
+      }
+
       &:hover {
-          transform: scale(1.1);
+        transform: scale(1.1);
       }
 
       .top {
@@ -50,6 +66,11 @@
             width: 105px;
             border-radius: 50%;
             object-fit: cover;
+
+            @include mobile {
+              width: 50px;
+              height: 50px;
+            }
           }
         }
       }
@@ -58,6 +79,11 @@
         padding: 10px;
         background-color: rgb(250, 244, 245);
         border-radius: 10px;
+
+        @include mobile {
+          font-size: 12px;
+          padding: 5px;
+        }
       }
 
       .bottom {
@@ -68,10 +94,18 @@
 
         h3 {
           margin-bottom: 10px;
+
+          @include mobile {
+            font-size: 14px;
+          }
         }
 
         h4 {
           color: rgb(0, 0, 0);
+
+          @include mobile {
+            font-size: 13;
+          }
         }
       }
     }
