--- a/src/components/works/Works.scss
+++ b/src/components/works/Works.scss
@@ -1,3 +1,5 @@
+@import "../../global.scss";
+
 .works {
   position: relative;
   display: flex;
@@ -9,6 +11,10 @@
     position: absolute;
     height: 50px;
     cursor: pointer;
+
+    @include mobile {
+      display: none;
+    }
 
     &.left {
       left: 100px;
@@ -27,6 +33,12 @@
     height: 450px;
     transition: all 1s ease-out;
 
+    @include mobile {
+      height: 100vh;
+      flex-direction: column;
+      justify-content: center;
+    }
+
     .container {
       width: 100vw;
       display: flex;
@@ -42,6 +54,12 @@
         width: 800px;
         height: 100%;
 
+        @include mobile {
+          height: 150px;
+          width: 80%;
+          margin: 16px 0;
+        }
+
         .left {
           display: flex;
           align-items: center;
@@ -56,6 +74,11 @@
             width: 90%;
             height: 70%;
 
+            @include mobile {
+              width: 100%;
+              height: 100%;
+            }
+
             .imgContainer {
               display: flex;
               align-items: center;
@@ -65,22 +88,45 @@
               border-radius: 50%;
               background: rgb(245, 179, 155);
 
+              @include mobile {
+                width: 20px;
+                height: 20px;
+              }
+
               img {
                 width: 25px;
+
+                @include mobile {
+                  width: 15px;
+                }
               }
             }
 
             h2 {
               font-size: 20px;
+
+              @include mobile {
+                font-size: 13px;
+                margin-left: 5px;
+              }
             }
             p {
               font-size: 13px;
+
+              @include mobile {
+                display: none;
+              }
             }
             span {
               font-size: 12px;
               font-weight: 600;
               text-decoration: underline;
               cursor: pointer;
+
+              @include mobile {
+                font-size: 13px;
+                margin-left: 5px;
+              }
             }
           }
         }
